# cpp_prac

./: .gitignore  README.md
ORB_SLAM3/: Dockerfile  Makefile
compile-link/: Makefile  sub.cpp
compile-link/src/: main.cpp
general/1_grammar/: Makefile  fizzbuzz.cpp  function.cpp  hello.cpp
general/2_pointer/: new_del.cpp  pointer.cpp  reference.cpp
general/3_array_vector/: create_data.sh  vector.cpp
general/4_lib/1_one_file/src/: main.cpp
general/4_link/: Makefile
general/5_class/: main.cpp
general/5_class/include/: human.hpp  lab.hpp  student.hpp
general/5_class/src/: human.cpp  lab.cpp  student.cpp
general/compile-link/: Makefile  add.cpp
general/dynamic-lib/: Makefile  add.cpp  hello.cpp
general/header/: Makefile  main.cpp  sub.cpp
general/static-lib/: Makefile  main.cpp
opencv/: CMakeLists.txt  README.md
opencv/displayImage/: CMakeLists.txt  displayImage.cpp
opencv/docker-OpenCV-4.4.0/: Dockerfile  Makefile
opencv/docker-OpenCV-4.4.0_M1/: Dockerfile  Makefile
opencv/simple_cam/: main.cpp
opencv/src/: detectFace.cpp  displayImage.cpp  realtimeBlurCamera.cpp  realtimeCamera.cpp
simple_cam/: CMakeLists.txt
static-lib/: Makefile  add.cpp  main.cpp
